--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -18,6 +18,47 @@ import Col from "../../components/Col.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
 <Layout title="Vector Calculus">
+
+<div slot="navtree">
+  <ul class='list-group list-group-flush py-0'> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#dot_product'>Dot product</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#dot_product_identities'>Dot product identities</a></li>  
+        </ul>
+    </li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#cross_product'>Cross product</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cross_product_identities'>Cross product identities</a></li>  
+        </ul>
+    </li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#derivatives'>Derivatives</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#newton_versus_leibniz_notation'>Newton versus Leibniz Notation</a></li>
+        </ul>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#derivatives_and_vector_positions'>Derivatives and vector \"positions\"</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cartesian'>Cartesian</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#non-cartesian_polar_basis'>Non-Cartesian: Polar basis</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#graphical_estimation'>Graphical estimation</a></li>
+        </ul>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#chain_rule'>Chain rule</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scalars'>Scalars</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#second_derivative'>Second derivative</a></li>
+        </ul>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#integration'>Integration</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cartesian_basis'>Cartesian basis</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#polar_basis'>Polar basis</a></li>
+        </ul>
+    </li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#solving_equations'>Solving equations</a></li>
+</ul>
+</div>
+
 <Section title="Vector Calculus" id="vector_calculus"></Section>
 
 <SubSection title="Dot product" id="dot_product">
