--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -15,6 +15,46 @@ import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import Warning from "../../components/Warning.astro"
 ---
 <Layout title="Vectors Scalars">
+
+<div slot="navtree">
+  <ul class='list-group list-group-flush py-0'> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalars_vs_vectors'>Scalars vs. Vectors</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vectors'>Vectors</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scalars'>Scalars</a></li> 
+        </ul>
+    </li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_operations'>Vector Operations</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scaling_vectors'>Scaling Vectors</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_addition_and_subtraction'>Vector Addition and Subtraction</a></li> 
+        </ul>
+    </li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#unit_vectors'>Unit Vectors</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector Magnitude and Direction</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalar_and_vector_products'>Scalar and Vector Products</a>
+        <ul class='list-group list-group-flush py-0'> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#dot_product'>Dot Product</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#dot_product_identities'>Dot Product Identities</a>
+                    </li> 
+                </ul>
+            </li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cross_product'>Cross Product</a>
+                <ul class='list-group list-group-flush py-0'> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#cross_product_identities'>Cross Product Identities</a>
+                    </li> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#calculating_the_cross_product'>Calculating the Cross Product</a>
+                    </li> 
+                </ul>
+            </li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_projection'>Vector Projection</a>
+            </li> 
+        </ul>
+    </li>
+</ul>
+</div>
+
 <Section title="Vectors and Scalars" id="vectors_and_scalars"></Section>
 
 <!-- \subsection{Force Vectors} -->
