--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -24,6 +24,14 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </style>
 
 <Layout title="Cartesian Coordinates">
+
+<div slot="navtree">
+  <ul class='list-group list-group-flush py-0'> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_bases'>Vector Bases</a></li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#right_hand_rule'>Right Hand Rule</a></li>
+</ul>
+</div>
+
 <Section title="Cartesian Coordinates" id="cartesian_coordinates">
 
     <p>
