--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -188,7 +188,7 @@ From observation:
 
 </SubSubSection>
 
-<SubSubSection title="Gear Systems - do we want to add?">
+<SubSubSection title="Gear Systems">
 
 <Image src="/Solid_Mechanics/Torsion-Figures/GearSystemv2.png" width="5">  Gear system </Image>
 
